data/derived/sp14/progs/unify/prog4839.ml.out
Characters 8-15:
  let _ = [1;0;2] + [2;3;0];;
          ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
